karnc/tests/fixtures/negative/135_integration_unwired_dependency/src/app/dep.karn
context app.dep
exports transparent { DErr }
type DErr = enum { Bad }
service work {
  on call() -> Effect[Result[Int, DErr]] { Ok(1) }
}
